Adjusted styles to prevent overlapping.

--- a/css/views-styles.css
+++ b/css/views-styles.css
@@ -2215,10 +2215,11 @@ span.daisy-icon-login {
 .repo-item.available-formats .views-field-field-accessibility-tags .field-content .item-list ul li {
 	background-color: #FFFFFF;
 	border: 1px solid #336699;
-	display: inline;
+	display: inline-block;
 	float: none;
-	margin: 0;
+	margin: 0 0 6px 0;
 	padding: 3px 10px;
+	width: auto;
 }
 
 .repo-item.available-formats .views-field-field-accrual-method div.field-content,
